--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=symptomssys
+server.port=8080
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/symptomssys_db
+spring.datasource.username=trish
+spring.datasource.password=trish
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Axon
+axon.axonserver.enabled=false
